--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,35 @@
+aioflask==0.4.0
+asgiref==3.5.0
+asyncio==3.4.3
 bidict==0.21.4
+cachelib==0.6.0
 certifi==2021.10.8
 charset-normalizer==2.0.12
 click==8.0.3
 colorama==0.4.4
+dnspython==2.2.1
+eventlet==0.33.0
 Flask==2.0.2
 Flask-MySQLdb==1.0.1
+Flask-Session==0.4.0
 Flask-SocketIO==5.1.1
+greenlet==1.1.2
+greenletio==0.9.0
 gunicorn==20.1.0
+h11==0.13.0
 idna==3.3
 itsdangerous==2.0.1
 Jinja2==3.0.3
 MarkupSafe==2.0.1
 mysql-connector-python==8.0.28
 mysqlclient==2.1.0
+nest-asyncio==1.5.4
 python-engineio==4.3.1
 python-socketio==5.5.1
 requests==2.27.1
+six==1.16.0
 urllib3==1.26.8
+uvicorn==0.17.6
+websocket-client==1.3.1
+websockets==10.2
 Werkzeug==2.0.2
