--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ asyncio==3.4.3
 bidict==0.21.4
 cachelib==0.6.0
 certifi==2021.10.8
+cffi==1.15.0
 charset-normalizer==2.0.12
 click==8.0.3
 colorama==0.4.4
@@ -12,7 +13,9 @@ eventlet==0.33.0
 Flask==2.0.2
 Flask-MySQLdb==1.0.1
 Flask-Session==0.4.0
+flask-sock==0.5.2
 Flask-SocketIO==5.1.1
+gevent==21.12.0
 greenlet==1.1.2
 greenletio==0.9.0
 gunicorn==20.1.0
@@ -24,12 +27,20 @@ MarkupSafe==2.0.1
 mysql-connector-python==8.0.28
 mysqlclient==2.1.0
 nest-asyncio==1.5.4
+pycparser==2.21
 python-engineio==4.3.1
 python-socketio==5.5.1
+pythonping==1.1.1
+rel==0.4.7
 requests==2.27.1
+simple-websocket==0.5.1
 six==1.16.0
 urllib3==1.26.8
 uvicorn==0.17.6
+websocket==0.2.1
 websocket-client==1.3.1
 websockets==10.2
 Werkzeug==2.0.2
+wsproto==1.1.0
+zope.event==4.5.0
+zope.interface==5.4.0
