--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 aioflask==0.4.0
+aniso8601==9.0.1
 asgiref==3.5.0
 asyncio==3.4.3
 bidict==0.21.4
@@ -8,14 +9,17 @@ cffi==1.15.0
 charset-normalizer==2.0.12
 click==8.0.3
 colorama==0.4.4
+commonmark==0.9.1
 dnspython==2.2.1
 eventlet==0.33.0
 Flask==2.0.2
 Flask-MySQLdb==1.0.1
+Flask-RESTful==0.3.9
 Flask-Session==0.4.0
 flask-sock==0.5.2
 Flask-SocketIO==5.1.1
 gevent==21.12.0
+graphlib-backport==1.0.3
 greenlet==1.1.2
 greenletio==0.9.0
 gunicorn==20.1.0
@@ -24,15 +28,20 @@ idna==3.3
 itsdangerous==2.0.1
 Jinja2==3.0.3
 MarkupSafe==2.0.1
+myqueue==22.3.0
 mysql-connector-python==8.0.28
 mysqlclient==2.1.0
 nest-asyncio==1.5.4
+paho-mqtt==1.6.1
 pycparser==2.21
+Pygments==2.11.2
 python-engineio==4.3.1
 python-socketio==5.5.1
 pythonping==1.1.1
+pytz==2022.1
 rel==0.4.7
 requests==2.27.1
+rich==12.0.1
 simple-websocket==0.5.1
 six==1.16.0
 urllib3==1.26.8
