--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ idna==3.3
 itsdangerous==2.0.1
 Jinja2==3.0.3
 MarkupSafe==2.0.1
+mosquito==0.3.2
 myqueue==22.3.0
 mysql-connector-python==8.0.28
 mysqlclient==2.1.0
@@ -44,6 +45,7 @@ requests==2.27.1
 rich==12.0.1
 simple-websocket==0.5.1
 six==1.16.0
+tqdm==4.63.1
 urllib3==1.26.8
 uvicorn==0.17.6
 websocket==0.2.1
